--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "module": "esnext",
     "allowJs": true,
     "checkJs": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "sourceMap": true,
     "declaration": true,
     "declarationDir": "types",
@@ -34,10 +34,7 @@
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "package.json",
-    ".eslintrc.js"
+    "src/**/*",
   ],
   "exclude": [
     "dist",
