--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 @EchoUI:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=$GITHUB_TOKEN_RW
 always-auth=true
