--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "EchoUI",
+  "name": "@EcoUI",
   "version": "1.0.0",
-  "description": "Echo UI Design System",
+  "description": "Eco UI Design System",
   "license": "MIT",
   "author": "Echo",
   "main": "dist/cjs/index.js",
@@ -16,12 +16,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TheEcho/EchoUI.git"
+    "url": "git+https://github.com/TheEcho/EcoUI.git"
   },
   "bugs": {
-    "url": "https://github.com/TheEcho/EchoUI/issues"
+    "url": "https://github.com/TheEcho/EcoUI/issues"
   },
-  "homepage": "https://github.com/TheEcho/EchoUI#readme",
+  "homepage": "https://github.com/TheEcho/EcoUI#readme",
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
       "eslint --fix",
@@ -62,6 +62,7 @@
     "@emotion/styled": "11.11.0",
     "@rollup/plugin-commonjs": "25.0.4",
     "@rollup/plugin-node-resolve": "15.2.1",
+    "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "11.1.4",
     "@types/react": "18.2.23",
     "@types/react-datepicker": "4.15.1",
@@ -84,7 +85,6 @@
     "rollup": "3.29.3",
     "rollup-plugin-dts": "6.0.2",
     "rollup-plugin-peer-deps-external": "2.2.4",
-    "rollup-plugin-terser": "7.0.2",
     "typescript": "5.2.2",
     "uuid": "9.0.1"
   },
