--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -16,6 +16,6 @@ jobs:
           registry-url: https://npm.pkg.github.com/
       - run: yarn install
       - run: yarn build
-      - run: yarn publish
+      - run: yarn npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GH_TOKEN}}
