--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -9,13 +9,14 @@ jobs:
   publish-github-registry:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20.x
           registry-url: https://npm.pkg.github.com/
+          scope: '@EcoUI'
       - run: yarn install
       - run: yarn build
-      - run: yarn npm publish
+      - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GH_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
