--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@EcoUI",
+  "name": "@TheEcho/EcoUI",
   "version": "1.0.1",
   "description": "Eco UI Design System",
   "license": "MIT",
