--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,4 +1,3 @@
-# .github/workflows/release-package.yml
 name: Publish package to Github
 on:
   release:
@@ -13,8 +12,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
-          node-version: 20.x
-          registry-url: https://npm.pkg.github.com/
+          node-version: '20.x'
+          registry-url: 'https://npm.pkg.github.com'
           scope: '@TheEcho'
       - run: yarn install
       - run: yarn build
