--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "build": "rollup -c --bundleConfigAsCjs"
