--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -15,8 +15,13 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@TheEcho'
+      - name: Setup .yarnrc.yml
+        run: |
+          yarn config set npmScopes.TheEcho.npmRegistryServer "https://npm.pkg.github.com"
+          yarn config set npmScopes.TheEcho.npmAlwaysAuth true
+          yarn config set npmScopes.TheEcho.npmAuthToken $NPM_AUTH_TOKEN
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: yarn install
       - run: yarn build
       - run: yarn npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
