--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -13,15 +13,13 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@TheEcho'
       - name: Setup .yarnrc.yml
         run: |
           yarn config set npmScopes.TheEcho.npmRegistryServer "https://npm.pkg.github.com"
           yarn config set npmScopes.TheEcho.npmAlwaysAuth true
-          yarn config set npmScopes.TheEcho.npmAuthToken $NPM_AUTH_TOKEN
+          yarn config set npmScopes.TheEcho.npmAuthToken $NODE_AUTH_TOKEN
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: yarn install
+      - run: yarn install --immutable
       - run: yarn build
       - run: yarn npm publish
