--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "sourceMap": true,
     "declaration": true,
     "declarationDir": "types",
+    "jsxImportSource": "@emotion/react",
     "emitDeclarationOnly": true,
     "outDir": "./dist",
     "isolatedModules": true,
