--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theecho/ecoui",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Eco UI Design System",
   "license": "MIT",
   "author": "Echo",
@@ -85,6 +85,7 @@
     "next": "13.5.3",
     "prettier": "3.0.3",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "rollup": "3.29.3",
     "rollup-plugin-dts": "6.0.2",
     "rollup-plugin-peer-deps-external": "2.2.4",
